--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -10,7 +10,7 @@
   </ion-navbar>
 </ion-header>
 
-<<ion-content padding>
+<ion-content padding>
   <ion-card *ngIf="dish">
     <img src="{{BaseURL + dish.image}}"/>
     <ion-card-content>
