--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,11 +9,52 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    
+
     <ion-title>About Us</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-title color="primary" margin-left="20px"> Our History </ion-card-title>
+    <ion-card-content>
+      <p>
+        Started in 2010, Ristorante con Fusion quickly established itself as a
+        culinary icon par excellence in Hong Kong. With its unique brand of
+        world fusion cuisine that can be found nowhere else, it enjoys patronage
+        from the A-list clientele in Hong Kong. Featuring four of the best
+        three-star Michelin chefs in the world, you never know what will arrive
+        on your plate the next time you visit us.
+      </p>
+      <p>
+        The restaurant traces its humble beginnings to <em>The Frying Pan</em>,
+        a successful chain started by our CEO, Mr. Peter Pan, that featured for
+        the first time the world's best cuisines in a pan.
+      </p>
+    </ion-card-content>
+  </ion-card>
 
+  <ion-card *ngIf="leaders">
+    <ion-card-title color="primary" margin-left="20px"> Corperate Leaders </ion-card-title>
+    <ion-card-content>
+      <ion-list *ngFor="let leader of leaders">
+        <ion-item lines="none">
+          <ion-avatar>
+            <img src="{{BaseURL + leader.image}}" alt="{{leader.name}}" />
+          </ion-avatar>
+        </ion-item>
+        <h2>{{leader.name}} {{leader.abbr}}</h2>
+        <p>{{leader.designation}}</p>
+        <p>{{leader.description}}</p>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+  <div [hidden]="leaders || errMess">
+    <ion-spinner></ion-spinner>
+    <h4>Loading . . . Please Wait</h4>
+  </div>
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
 </ion-content>
