--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,14 +9,10 @@
 
 <ion-content>
   <ion-card *ngIf="dish">
-    <img src="{{BaseURL + dish.image}}"/>
+    <img src="{{BaseURL + dish.image}}" />
     <ion-card-content>
-      <ion-card-title>
-        {{dish.name | uppercase}}
-      </ion-card-title>
-      <p>
-        {{dish.description}}
-      </p>
+      <ion-card-title> {{dish.name | uppercase}} </ion-card-title>
+      <p>{{dish.description}}</p>
     </ion-card-content>
   </ion-card>
   <div [hidden]="dish || dishErrMess">
@@ -27,16 +23,12 @@
     <h2>Error</h2>
     <h4>{{dishErrMess}}</h4>
   </div>
-    
+
   <ion-card *ngIf="promotion">
-    <img src="{{BaseURL + promotion.image}}"/>
+    <img src="{{BaseURL + promotion.image}}" />
     <ion-card-content>
-      <ion-card-title>
-        {{promotion.name | uppercase}}
-      </ion-card-title>
-      <p>
-        {{promotion.description}}
-      </p>
+      <ion-card-title> {{promotion.name | uppercase}} </ion-card-title>
+      <p>{{promotion.description}}</p>
     </ion-card-content>
   </ion-card>
   <div [hidden]="promotion || promoErrMess">
@@ -47,19 +39,13 @@
     <h2>Error</h2>
     <h4>{{promoErrMess}}</h4>
   </div>
-  
+
   <ion-card *ngIf="leader">
-    <img src="{{BaseURL + leader.image}}"/>
+    <img src="{{BaseURL + leader.image}}" />
     <ion-card-content>
-      <ion-card-title>
-        {{leader.name | uppercase}}
-      </ion-card-title>
-      <p>
-        {{leader.designation}}
-      </p>
-      <p>
-        {{leader.description}}
-      </p>
+      <ion-card-title> {{leader.name | uppercase}} </ion-card-title>
+      <p>{{leader.designation}}</p>
+      <p>{{leader.description}}</p>
     </ion-card-content>
   </ion-card>
   <div [hidden]="leader || leaderErrMess">
@@ -70,4 +56,18 @@
     <h2>Error</h2>
     <h4>{{leaderErrMess}}</h4>
   </div>
-  </ion-content>
+
+  <ion-fab right bottom>
+    <button ion-fab color="accent">
+      <ion-icon name="arrow-dropup"></ion-icon>
+    </button>
+    <ion-fab-list side="top">
+      <button ion-fab class="btn-mail"><ion-icon name="mail"></ion-icon></button>
+      <button ion-fab class="btn-google-plus"><ion-icon name="logo-googleplus"></ion-icon></button>
+      <button ion-fab class="btn-youtube"><ion-icon name="logo-youtube"></ion-icon></button>
+      <button ion-fab class="btn-twitter"><ion-icon name="logo-twitter"></ion-icon></button>
+      <button ion-fab class="btn-facebook"><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab class="btn-linkedin"><ion-icon name="logo-linkedin"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
+</ion-content>
