Split Pane and Assignment

--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -6,20 +6,23 @@
 -->
 <ion-header>
   <ion-navbar color="primary">
+    <div class="actionbutton">
+      <ion-buttons slot="end">
+        <button ion-button icon-only clear (click)="openActionSheet()">
+          <ion-icon name="ellipsis-vertical"></ion-icon>
+        </button>
+      </ion-buttons>
+    </div>
     <ion-title>Dish Detail</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-card *ngIf="dish">
-    <img src="{{BaseURL + dish.image}}"/>
+    <img src="{{BaseURL + dish.image}}" />
     <ion-card-content>
-      <ion-card-title>
-        {{dish.name | uppercase}}
-      </ion-card-title>
-      <p>
-        {{dish.description}}
-      </p>
+      <ion-card-title> {{dish.name | uppercase}} </ion-card-title>
+      <p>{{dish.description}}</p>
     </ion-card-content>
     <ion-row>
       <ion-col>
@@ -44,20 +47,18 @@
     <h2>Error</h2>
     <h4>{{errMess}}</h4>
   </div>
-  
+
   <ion-list *ngIf="dish">
-    <ion-list-header>
-      Comments
-    </ion-list-header>
+    <ion-list-header> Comments </ion-list-header>
     <ion-item *ngFor="let comment of dish.comments" text-wrap>
-      <h4> {{comment.comment}} </h4>
-      <p> {{comment.rating}} Stars</p>
+      <h4>{{comment.comment}}</h4>
+      <p>{{comment.rating}} Stars</p>
       <p>
         <span> -- {{comment.author}} {{comment.date | date }} </span>
       </p>
     </ion-item>
   </ion-list>
-  
+
   <ion-fab bottom right [hidden]="favorite">
     <button ion-fab (click)="addToFavorites()">
       <ion-icon name="heart-outline"></ion-icon>
@@ -68,4 +69,4 @@
       <ion-icon name="heart"></ion-icon>
     </button>
   </ion-fab>
-  </ion-content>
+</ion-content>
