--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,9 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+  <ion-row align-items-center>
+    <ion-col col-12 col-lg-4>
   <ion-card *ngIf="dish">
     <img src="{{BaseURL + dish.image}}" />
     <ion-card-content>
@@ -23,7 +26,9 @@
     <h2>Error</h2>
     <h4>{{dishErrMess}}</h4>
   </div>
+  </ion-col>
 
+  <ion-col col-12 col-lg-4>
   <ion-card *ngIf="promotion">
     <img src="{{BaseURL + promotion.image}}" />
     <ion-card-content>
@@ -39,7 +44,9 @@
     <h2>Error</h2>
     <h4>{{promoErrMess}}</h4>
   </div>
+  </ion-col>
 
+  <ion-col col-12 col-lg-4>
   <ion-card *ngIf="leader">
     <img src="{{BaseURL + leader.image}}" />
     <ion-card-content>
@@ -56,6 +63,9 @@
     <h2>Error</h2>
     <h4>{{leaderErrMess}}</h4>
   </div>
+  </ion-col>
+  </ion-row>
+  </ion-grid>
 
   <ion-fab right bottom>
     <button ion-fab color="accent">
