--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar color="primary">
-    <button class="actionbutton" ion-button (click)="openActionSheet()">
+    <button slot="end" class="actionbutton" ion-button (click)="openActionSheet()">
       <ion-icon name="arrow-down-outline"></ion-icon>
     </button>
     <ion-title>Dish Detail</ion-title>
@@ -14,6 +14,9 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-grid>
+  <ion-row>
+    <ion-col col-12 col-lg>
   <ion-card *ngIf="dish">
     <img src="{{BaseURL + dish.image}}" />
     <ion-card-content>
@@ -43,7 +46,9 @@
     <h2>Error</h2>
     <h4>{{errMess}}</h4>
   </div>
+    </ion-col>
 
+    <ion-col col-12 col-lg>
   <ion-list *ngIf="dish">
     <ion-list-header> Comments </ion-list-header>
     <ion-item *ngFor="let comment of dish.comments" text-wrap>
@@ -54,6 +59,9 @@
       </p>
     </ion-item>
   </ion-list>
+  </ion-col>
+  </ion-row>
+  </ion-grid>
 
   <ion-fab bottom right [hidden]="favorite">
     <button ion-fab (click)="addToFavorites()">
