Ionic Cordova Plugins

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -32,10 +32,16 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button ion-button class="button" size="small" expand="full" color="primary-pale" text="primary"><ion-icon name="call" color="primary"> Call</ion-icon></button>
+          <button ion-button icon-left clear small (click)="callRestaurant()">
+            <ion-icon name="call"></ion-icon>
+            <div>Call</div>
+          </button>
         </ion-col>
         <ion-col>
-          <button ion-button class="button" size="small" expand="full" color="primary-pale" text="primary"><ion-icon name="mail" color="primary"> Email</ion-icon></button>
+          <button ion-button icon-left clear small (click)="sendEmail()">
+            <ion-icon name="mail"></ion-icon>
+            <div>Email</div>
+          </button>
         </ion-col>
       </ion-row>
     </ion-grid>
