--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,7 +11,7 @@
         <span ion-text color="primary" showWhen="ios">Cancel</span>
         <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
       </button>
-    </ion-buttons>    
+    </ion-buttons>
     <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -28,8 +28,17 @@
     </ion-item>
     <ion-item>
       <ion-label>Remember Me</ion-label>
-      <ion-checkbox color="primary" formControlName="remember" checked="true"></ion-checkbox>
+      <ion-checkbox
+        color="primary"
+        formControlName="remember"
+        checked="true"
+      ></ion-checkbox>
     </ion-item>
-    <button ion-button type="submit" [disabled]="!loginForm.valid">Login</button>
+    <button ion-button type="submit" [disabled]="!loginForm.valid">
+      Login
+    </button>
   </form>
+
+  <p>Do not have an account? Then</p>
+  <button ion-button clear (click)="openRegister()">Register</button>
 </ion-content>
