--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -25,6 +25,11 @@
         <ion-col>
           <button ion-button small (click)="getPicture()">Take Picture</button>
         </ion-col>
+        <ion-col>
+          <button ion-button small (click)="getFromLibrary()">
+            Upload Picture
+          </button>
+        </ion-col>
       </ion-row>
     </ion-grid>
   </ion-card>
